--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -75,6 +75,8 @@ jobs:
           sudo apt-get purge containerd.io
           sudo rm -r /run/containerd
 
+          sudo snap install docker
+
           sudo snap install concierge --classic
           sudo concierge prepare -p k8s
 
