Add separate input to install docker after k8s bootstrap

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -16,6 +16,11 @@ on:
         default: ""
         required: false
         type: string
+      install-docker:
+        descriptoin: "Flag to enable installation of docker after k8s is bootstraped"
+        default: false
+        required: false
+        type: boolean
 
 jobs:
   format:
@@ -82,6 +87,12 @@ jobs:
           sudo snap install concierge --classic
 
           sudo -E concierge prepare -p k8s
+
+          # Cannot use --extra-snaps with concierge because docker needs to be installed
+          # after k8s is bootstrapped
+          if [[ -n "${{ inputs.install-docker }}" ]]; then
+            sudo snap install docker
+          fi
         env:
           CONCIERGE_EXTRA_SNAPS: ${{ inputs.extra-snaps }}
 
