--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -68,6 +68,7 @@ jobs:
   apply:
     name: Terraform apply
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     defaults:
       run:
         working-directory: ${{ inputs.module-directory }}
