CI: add timeout to terraform apply (#5)
* adding timeout to the terraform apply 

Signed-off-by: arjun11-malik <arjun.malik@canonical.com>

* adding an argument to set the timeout-minutes

Signed-off-by: arjun11-malik <arjun.malik@canonical.com>

* removing typo

Signed-off-by: arjun11-malik <arjun.malik@canonical.com>

---------

Signed-off-by: arjun11-malik <arjun.malik@canonical.com>

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -21,6 +21,11 @@ on:
         default: false
         required: false
         type: boolean
+      timeout-minutes:
+        description: "Timeout (in minutes) for the apply job"
+        default: 60
+        required: false
+        type: number
 
 jobs:
   format:
@@ -68,6 +73,7 @@ jobs:
   apply:
     name: Terraform apply
     runs-on: ubuntu-latest
+    timeout-minutes: ${{ inputs.timeout-minutes }}
     defaults:
       run:
         working-directory: ${{ inputs.module-directory }}
