add kgoss installation

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -97,6 +97,12 @@ jobs:
 
           sudo -E concierge prepare -p k8s
 
+          # FIXME: Install via goss snap whenever available
+          goss_base_url="https://github.com/goss-org/goss/releases/latest/download"
+          
+          curl -L ${goss_base_url}/kgoss -o /usr/local/bin/kgoss
+          chmod +rx /usr/local/bin/kgoss
+
         env:
           CONCIERGE_EXTRA_SNAPS: ${{ inputs.extra-snaps }}
 
